# mcpredator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cursor/skills/mcpredator-add-check/: SKILL.md
.cursor/skills/mcpredator-add-patterns/: SKILL.md
.cursor/skills/mcpredator-add-transport/: SKILL.md
.cursor/skills/mcpredator-extend-dvmcp/: SKILL.md
.cursor/skills/mcpredator-run-tests/: SKILL.md
mcpredator/: __init__.py  __main__.py  cli.py  diff.py  scanner.py
mcpredator/checks/: __init__.py  base.py  behavioral.py  chaining.py  execution.py  injection.py  permissions.py  prompt_leakage.py  rate_limit.py  response_credentials.py  supply_chain.py  theft.py  tool_probes.py  transport.py
mcpredator/core/: __init__.py  constants.py  enumerator.py  models.py  session.py
mcpredator/data/: public_targets.txt
mcpredator/k8s/: Dockerfile  __init__.py  fingerprint.py  scanner.py
mcpredator/k8s/manifests/: cronjob.yaml  job.yaml  kustomization.yaml  namespace.yaml  rbac-impersonate.yaml  rbac.yaml  serviceaccount.yaml
mcpredator/patterns/: __init__.py  probes.py
mcpredator/reporting/: __init__.py  console.py  json_out.py
mcpvenom/checks/: llm_analysis.py
mcpvenom/core/: llm.py
tests/: __init__.py  conftest.py  test_checks_integration.py  test_cli.py  test_diff.py  test_dvmcp.py  test_k8s.py  test_patterns.py  test_prompt_leakage.py  test_public_targets.py  test_rate_limit.py  test_response_credentials.py  test_supply_chain.py
walkthrough/: README.md  demo_ai.sh
